# taipower

./: CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: CI.yml  cmake.yml  codeql.yml
demo/: CMakeLists.txt  Dockerfile  apiserver.c  compile.sh  demo.c
demo/example/: test_commercial.json  test_extra_high_voltage_o1.json  test_extra_high_voltage_o2.json  test_high_voltage_o1.json  test_high_voltage_o2.json  test_meter_simple_tou.json  test_meter_simple_tou_o2.json  test_power_tou_demand.json  test_power_tou_device.json  test_residential.json
demo/inc/: comm.h
demo/src/: comm.c
inc/: taipower.h
src/: CMakeLists.txt  taipower.c
test/: CMakeLists.txt  test_all.c  test_commercial.c  test_diff_days.c  test_extra_high_voltage_time_of_use_option_1.c  test_extra_high_voltage_time_of_use_option_2.c  test_extra_high_voltage_tou_o1.c  test_extra_high_voltage_tou_o2.c  test_high_voltage_time_of_use_option_1.c  test_high_voltage_time_of_use_option_2.c  test_high_voltage_tou_o1.c  test_high_voltage_tou_o2.c  test_is_leap_year.c  test_is_valid_date_format.c  test_isleapyear.c  test_low_voltage_time_of_use_option_1.c  test_meter_service_a.c  test_meter_tou_b_o1.c  test_power_factor_reward_calc.c  test_power_tou_o1.c  test_residential.c  test_service_a.c  test_time_of_use_b_option_1.c  test_time_of_use_option_core.c  test_tou_core.c
