FILE(GLOB_RECURSE srcs *.c)
FILE(GLOB_RECURSE headers ${PROJECT_SOURCE_DIR}/inc/*.h)

IF(BUILD_SHARED_LIBS)
    ADD_LIBRARY(${PROJECT_NAME} SHARED ${srcs})
ELSE()
    ADD_LIBRARY(${PROJECT_NAME} STATIC ${srcs})
ENDIF()

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/inc)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)
INSTALL(FILES ${headers} DESTINATION include)
